--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		
 	</style>
 	
-	<link rel="stylesheet" href="./dist/styles.css">
-	<script src="./dist/scripts.js" defer></script>
+	<link rel="stylesheet" href="dist/styles.css">
+	<script src="dist/scripts.js" defer></script>
 	<script src="https://kit.fontawesome.com/92f88fdaa1.js" crossorigin="anonymous"></script>
 
 </head>
