--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 			width: 40%;
 			max-width: 1000px;
 			margin: 0 auto;
-			/* position: relative; */
 		}
 		
 		.content {
@@ -24,18 +23,18 @@
 		
 	</style>
 	
-	<link rel="stylesheet" href="dist/styles.css">
-	<script src="dist/scripts.js" defer></script>
+	<link rel="stylesheet" href="./dist/styles.css">
+	<script src="./dist/scripts.js" defer></script>
 	<script src="https://kit.fontawesome.com/92f88fdaa1.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
 	
-	<div class="text js-text">
+	<div class="text">
 
-		<div class="editor js-editor"></div>
+		<div class="editor"></div>
 		
-		<div class="content js-content">
+		<div class="content">
 			
 			<h3>Lorem ipsum dolor sit amet</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
