Packaged up into module

--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
 		}
 		
 		.editor {
-			width: 40%;
+			/* width: 40%; */
 			max-width: 1000px;
 			margin: 0 auto;
 		}
@@ -23,14 +23,14 @@
 		
 	</style>
 	
-	<link rel="stylesheet" href="./dist/styles.css">
-	<script src="./dist/scripts.js" defer></script>
+	<link rel="stylesheet" href="./styles.css">
+	<script src="./scripts.js" type="module" defer></script>
 	<script src="https://kit.fontawesome.com/92f88fdaa1.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
 	
-	<div class="text">
+	<div class="text" data-id="123">
 
 		<div class="editor"></div>
 		
