--- a/test/embedded.html
+++ b/test/embedded.html
@@ -23,7 +23,12 @@
 	<link rel="stylesheet" href="./styles.css">
 	<script src="https://kit.fontawesome.com/92f88fdaa1.js" crossorigin="anonymous"></script>
 
-	<script src="./scripts.js" type="module" defer></script>
+	<script>
+		// Tell parent window when dom has loaded
+		document.addEventListener('DOMContentLoaded', () => {
+			window.parent.frameReady()
+		})
+	</script>
 
 </head>
 <body>
