--- a/test/bare.html
+++ b/test/bare.html
@@ -16,17 +16,13 @@
 			max-width: 1000px;
 			margin: 0 auto;
 		}
-
-		[contenteditable] {
-			outline: none;
-		}
 		
 	</style>
 	
 	<link rel="stylesheet" href="./styles.css">
 	<script src="https://kit.fontawesome.com/92f88fdaa1.js" crossorigin="anonymous"></script>
 
-	<script src="./scripts.js" type="module" defer></script>
+	<script src="./scripts2.min.js" type="module" defer></script>
 
 </head>
 <body>
